# dashboard-generator

./: .gitignore  Clean_Amazon_Sales.csv  README.md  TODO.md  app.py  backend.py  package.json  packages.txt  pyproject.toml  requirements.txt  setup.sh
.streamlit/: config.toml
